--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="banner" style="text-align: left;">
 					<div class="content">
 						<header>
 							<h2>The future has landed</h2>
 							<p>And there are no hoverboards or flying cars.</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt=""></span>
+						
 					</div>
 					<a href="#odio" class="goto-next scrolly">Next</a>
 				</section>
@@ -94,35 +94,35 @@
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<h3>Ipsum sed commodo</h3>
+									<h3><a href="#">Ipsum sed commodo</a></h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<h3>Eleifend lorem ornare</h3>
+									<h3><a href="#">Eleifend lorem ornare</a></h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<h3>Cubilia cep lobortis</h3>
+									<h3><a href="#">Cubilia cep lobortis</a></h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<h3>Non semper interdum</h3>
+									<h3><a href="#">Non semper interdum</a></h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<h3>Odio laoreet accumsan</h3>
+									<h3><a href="#">Odio laoreet accumsan</a></h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<h3>Odio laoreet accumsan</h3>
+									<h3><a href="#">Odio laoreet accumsan</a></h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<h3>Odio laoreet accumsan</h3>
+									<h3><a href="#">Odio laoreet accumsan</a></h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<h3>Odio laoreet accumsan</h3>
+									<h3><a href="#">Odio laoreet accumsan</a></h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 							</div>
@@ -141,8 +141,8 @@
 						<li class="email-link"><a href="mailto:tmp@tmp.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						<li>Landed</li>
+						<li class="company-detail">powered by canner Inc</li>
+						<li class="company-detail">Landed</li>
 					</ul>
 				</footer>
 
