--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner" style="text-align: left; background-image: url('images/pic02.jpg');">
+				<section id="banner" style="text-align: center; background-image: url('images/pic02.jpg');">
 					<div class="content">
 						<header>
 							<h2>The future has landed</h2>
